--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/1.1/Assemblies/
+/Source/More_Pause_Events.csproj.user
