--- a/Source/MorePauseEvents.csproj
+++ b/Source/MorePauseEvents.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{D7D21B4A-1DA7-41D8-B202-C58CA8FA62AA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SirRandoo.MPE</RootNamespace>
+    <RootNamespace>SirRandoo.PauseEvents</RootNamespace>
     <AssemblyName>MorePauseEvents</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
@@ -21,6 +22,7 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -30,8 +32,22 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'RimWorld 1.1|AnyCPU'">
+    <OutputPath>..\1.1\Assemblies\</OutputPath>
+    <Optimize>true</Optimize>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\..\workshop\content\294100\2009463077\v1.1\Assemblies\0Harmony.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -46,38 +62,58 @@
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <None Include="..\About\**" />
     <None Include="..\Defs\**" />
-    <None Include="..\Languages\English\Keyed\MPE_Letters.xml" />
     <None Include="..\Patches\**" />
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cache.cs" />
-    <Compile Include="MPE.cs" />
-    <Compile Include="Patches\IncidentWorker_TransportPodCrash.cs" />
-    <Compile Include="Patches\JobGiver_GetFood.cs" />
-    <Compile Include="Patches\JobGiver_BingeFood.cs" />
-    <Compile Include="Patches\JobGiver_HaulCorpseToPublicPlace.cs" />
-    <Compile Include="Patches\JobGiver_Idle.cs" />
-    <Compile Include="Patches\JobGiver_IdleJoy.cs" />
-    <Compile Include="Patches\JobGiver_MurderousRage.cs" />
+    <Compile Include="Logging.cs" />
+    <Compile Include="Mpe.cs" />
+    <Compile Include="Patches\GameEndPatch.cs" />
+    <Compile Include="Patches\TransportPodCrashPatch.cs" />
+    <Compile Include="Patches\PredatorHuntPatch.cs" />
+    <Compile Include="Patches\FoodBingePatch.cs" />
+    <Compile Include="Patches\CorpseObsessionPatch.cs" />
+    <Compile Include="Patches\IdlePatch.cs" />
+    <Compile Include="Patches\IdleJoyPatch.cs" />
+    <Compile Include="Patches\MurderousRagePatch.cs" />
     <Compile Include="Patches\MentalState.cs" />
-    <Compile Include="Patches\MentalState_InsultingSpreeAll.cs" />
-    <Compile Include="Patches\MentalState_Manhunter.cs" />
-    <Compile Include="Patches\MentalBreakWorker_Catatonic.cs" />
-    <Compile Include="Patches\MentalBreakWorker_RunWild.cs" />
-    <Compile Include="Patches\MentalState_SadisticRageTantrum.cs" />
-    <Compile Include="Patches\MentalState_SocialFight.cs" />
+    <Compile Include="Patches\InsultingSpreeAllPatch.cs" />
+    <Compile Include="Patches\ManhunterPatch.cs" />
+    <Compile Include="Patches\CatatonicBreakdownPatch.cs" />
+    <Compile Include="Patches\RunWildPatch.cs" />
+    <Compile Include="Patches\SadisticRagePatch.cs" />
+    <Compile Include="Patches\SocialFightPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony">
-      <Version>1.2.0.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="MPE_Settings.xml" />
+    <Content Include="..\About\About.xml">
+      <Link>About\About.xml</Link>
+    </Content>
+    <Content Include="..\About\Manifest.xml">
+      <Link>About\Manifest.xml</Link>
+    </Content>
+    <Content Include="..\About\Preview.png">
+      <Link>About\Preview.png</Link>
+    </Content>
+    <Content Include="..\About\PublishedFileId.txt">
+      <Link>About\PublishedFileId.txt</Link>
+    </Content>
+    <Content Include="..\Common\Languages\English\Keyed\MPE_Letters.xml">
+      <Link>Common\Languages\English\Keyed\MPE_Letters.xml</Link>
+    </Content>
+    <Content Include="..\Common\Languages\English\Keyed\MPE_Settings.xml">
+      <Link>Common\Languages\English\Keyed\MPE_Settings.xml</Link>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
@@ -90,9 +126,14 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug -quicktest|AnyCPU' ">
     <StartArguments>-quicktest</StartArguments>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release -quicktest|AnyCPU' ">
     <StartArguments>-quicktest</StartArguments>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release 1.1|AnyCPU' ">
+    <OutputPath>bin\Release 1.1\</OutputPath>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>
