Reverted namespace change to limit potential issues.

--- a/Source/MorePauseEvents.csproj
+++ b/Source/MorePauseEvents.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D7D21B4A-1DA7-41D8-B202-C58CA8FA62AA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SirRandoo.PauseEvents</RootNamespace>
+    <RootNamespace>SirRandoo.MPE</RootNamespace>
     <AssemblyName>MorePauseEvents</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -68,9 +68,23 @@
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.IMGUIModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -108,11 +122,11 @@
     <Content Include="..\About\PublishedFileId.txt">
       <Link>About\PublishedFileId.txt</Link>
     </Content>
-    <Content Include="..\Common\Languages\English\Keyed\MPE_Letters.xml">
-      <Link>Common\Languages\English\Keyed\MPE_Letters.xml</Link>
+    <Content Include="..\Languages\English\Keyed\MPE_Letters.xml">
+      <Link>Languages\English\Keyed\MPE_Letters.xml</Link>
     </Content>
-    <Content Include="..\Common\Languages\English\Keyed\MPE_Settings.xml">
-      <Link>Common\Languages\English\Keyed\MPE_Settings.xml</Link>
+    <Content Include="..\Languages\English\Keyed\MPE_Settings.xml">
+      <Link>Languages\English\Keyed\MPE_Settings.xml</Link>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
